[gd_scene load_steps=3 format=3 uid="uid://ttjdfr1sbut2"]

[ext_resource type="Script" path="res://sui.gd" id="1_44u3d"]

[sub_resource type="GDScript" id="GDScript_tok6u"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	#print($ButtonGetWallets)
	#$ButtonGetWallets.connect(\"pressed\", Callable(self, \"onGetWallets\"))
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass

func onGetWallets():
	var sdk = SuiSDK.new()
	var wallets = sdk.getWallets()
	
	for wallet in wallets:
		print(wallet.get_address())
		print(wallet.get_mnemonic())
		print(wallet.get_public_base64_key())
		print(wallet.get_private_key())
		print(wallet.get_key_scheme())
"

[node name="Node" type="Node"]
script = ExtResource("1_44u3d")

[node name="ButtonGetWallets" type="Button" parent="."]
offset_left = 105.0
offset_top = 59.0
offset_right = 285.0
offset_bottom = 101.0
toggle_mode = true
button_pressed = true
action_mode = 0
text = "Get Wallets"
script = SubResource("GDScript_tok6u")

[node name="ButtonGenWallet" type="Button" parent="."]
offset_left = 107.0
offset_top = 111.0
offset_right = 288.0
offset_bottom = 145.0
text = "Gen Wallet"

[node name="ButtonGenerateAndAddKey" type="Button" parent="."]
offset_left = 109.0
offset_top = 156.0
offset_right = 283.0
offset_bottom = 188.0
text = "Gen & Add Key"

[node name="ButtonGetWalletFromAddress" type="Button" parent="."]
offset_left = 109.0
offset_top = 204.0
offset_right = 309.0
offset_bottom = 235.0
text = "Get Wallet From Address"

[node name="ButtonImportFromPrivateKey" type="Button" parent="."]
offset_left = 111.0
offset_top = 256.0
offset_right = 308.0
offset_bottom = 287.0
text = "Import From Private Key"

[node name="ButtonImportFromMnemonic" type="Button" parent="."]
offset_left = 115.0
offset_top = 307.0
offset_right = 307.0
offset_bottom = 338.0
text = "Import From Mnemonic"

[connection signal="pressed" from="ButtonGetWallets" to="." method="_on_button_get_wallets_pressed"]
[connection signal="pressed" from="ButtonGenWallet" to="." method="_on_button_gen_wallet_pressed"]
[connection signal="pressed" from="ButtonGenerateAndAddKey" to="." method="_on_button_generate_and_add_key_pressed"]
[connection signal="pressed" from="ButtonGetWalletFromAddress" to="." method="_on_button_get_wallet_from_address_pressed"]
[connection signal="pressed" from="ButtonImportFromPrivateKey" to="." method="_on_button_import_from_private_key_pressed"]
[connection signal="pressed" from="ButtonImportFromMnemonic" to="." method="_on_button_import_from_mnemonic_pressed"]
